# cnmc_clasificador

./: .gitignore  README.md  dashboard.py  pyproject.toml  requirements.txt
config/: settings.py
data/output/: expedientes_2024.csv  expedientes_2024_v2.csv  informe_cnmc_2024.xlsx  informe_cnmc_2024_v2.xlsx  resumen_2024.csv  resumen_2024_v2.csv  resumen_2024_v3.csv  test_expedientes.csv  test_informe.xlsx  test_resumen.csv
data/processed/: expedientes_2024_analyzed.json  expedientes_2024_completo.json  expedientes_2024_v2.json  expedientes_2024_v3.json  expedientes_analyzed.json  expedientes_raw.json  expedientes_test.json
scripts/: analyze_no_clasificado.py  debug_classifier.py  debug_tecnico.py  enrich_pdfs.py  run_all.py  run_analysis.py  run_analysis_v3.py  run_extraction.py  run_reporting.py
src/analysis/: classifier.py  classifier_v2.py  rules.py
src/extraction/: models.py  pdf_handler.py  scraper.py
src/reporting/: charts.py  csv_generator.py  excel_generator.py
src/utils/: http_client.py
